# StudyTask-Manager

./: README.md
StudyTaskManager - GitHub/: CMakeLists.txt  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  task.h  taskmanager.cpp  taskmanager.h  tasks.json
